--- a/src/app/califyinvocador/califyinvocador.component.html
+++ b/src/app/califyinvocador/califyinvocador.component.html
@@ -1,6 +1,6 @@
 <div class="grid-container">
   <h1 class="mat-h1">Calificar invocador</h1>
-  <mat-grid-list cols="1" rowHeight="1000px">
+  <mat-grid-list cols="1" rowHeight="700px">
     <mat-grid-tile>
       <mat-card class="dashboard-card">
         <mat-card-content>
@@ -8,27 +8,30 @@
             <mat-grid-tile [colspan]="1" [rowspan]="1">
               <section class="mat-body center-align">
                 <mat-card-title>Calificacion Sugerida</mat-card-title>
-                Descripcion de los motivos de honor y consejos Descripcion de los motivos de honor y consejos
-                <br>
-                <h1 class="mat-headline">{{califyTitle}}</h1>
+                <h1 class="mat-headline">{{ratingTitle}}</h1>
               </section>
             </mat-grid-tile>
-            <mat-grid-tile [colspan]="1" [rowspan]="1" class="calify-form">
-              <form [formGroup]="califyForm" novalidate (ngSubmit)="onSubmit()">
+          </mat-grid-list>
+          <mat-grid-list cols="2" rowHeight="150px">
+            <form [formGroup]="ratingForm" novalidate (ngSubmit)="onSubmit()" class="rating-form">
+              <mat-grid-tile [colspan]="2">
                 <div class="row">
                   <div class="col">
                     <mat-form-field class="full-width">
-                      <mat-select placeholder="Claificacion" formControlName="calify" (selectionChange)="califyChange()">
-                        <mat-option *ngFor="let calify of califycations" [value]="calify">
-                          {{ calify.name }} | {{ calify.abbreviation }} 
+                      <mat-select placeholder="Claificacion" formControlName="rating"
+                        (selectionChange)="ratingChange()">
+                        <mat-option *ngFor="let rating of ratings" [value]="rating">
+                          {{ rating.name }} | {{ rating.description }}
                         </mat-option>
                       </mat-select>
-                      <mat-error *ngIf="califyForm.controls['calify'].hasError('required')">
+                      <mat-error *ngIf="ratingForm.controls['rating'].hasError('required')">
                         La calificacion es requerida <strong>required</strong>
                       </mat-error>
                     </mat-form-field>
                   </div>
                 </div>
+              </mat-grid-tile>
+              <mat-grid-tile [colspan]="2">
                 <div class="row">
                   <div class="col">
                     <mat-form-field appearance="outline" class="full-width">
@@ -39,16 +42,14 @@
                     </mat-form-field>
                   </div>
                 </div>
-              </form>
-            </mat-grid-tile>
-          </mat-grid-list>
-          <mat-grid-list cols="2" rowHeight="120px">
-            <mat-grid-tile [colspan]="1" [rowspan]="1">
-              <button mat-flat-button routerLink="/calify-invocador" color="primary">Calificar</button>
-            </mat-grid-tile>
-            <mat-grid-tile [colspan]="1" [rowspan]="1">
-              <button mat-flat-button routerLink="/calify-invocador" color="warn">Agregar DodgeAlert</button>
-            </mat-grid-tile>
+              </mat-grid-tile>
+              <mat-grid-tile [colspan]="1">
+                <button mat-flat-button color="primary">Calificar</button>
+              </mat-grid-tile>
+              <mat-grid-tile [colspan]="1">
+                <button mat-flat-button color="warn">Agregar DodgeAlert</button>
+              </mat-grid-tile>
+            </form>
           </mat-grid-list>
         </mat-card-content>
       </mat-card>
