--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -16,7 +16,8 @@
       </div>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-raised-button color="primary" routerLink="/invocador/{{ invocadoresForm.value.nombreInvocador }}">Submit</button>
+      <button mat-raised-button color="primary">Submit</button>
+      <button mat-raised-button color="accent">Click</button>
     </mat-card-actions>
   </mat-card>
   <mat-card class="info-card">
