--- a/src/app/califyinvocador/califyinvocador.component.css
+++ b/src/app/califyinvocador/califyinvocador.component.css
@@ -1,27 +1,25 @@
-.full-width {
-  width: 100%;
-}
 
-.shipping-card {
-  min-width: 520px;
-  margin: 20px auto;
-}
 
-.mat-radio-button {
-  display: block;
-  margin: 5px 0;
+.dashboard-card {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  right: 15px;
+  bottom: 15px;
 }
-
 .row {
   display: flex;
   flex-direction: row;
 }
-
 .col {
   flex: 1;
   margin-right: 20px;
 }
-.calify-form .row .col{
+.full-width {
+  width: 100%;
+}
+
+.rating-form .row .col{
   flex: 1;
   margin-right: 20px;
   width: 50vw;
@@ -34,13 +32,6 @@
   margin: 20px;
 }
 
-.dashboard-card {
-  position: absolute;
-  top: 15px;
-  left: 15px;
-  right: 15px;
-  bottom: 15px;
-}
 
 .more-button {
   position: absolute;
