--- a/src/app/singleinvocador/singleinvocador.component.html
+++ b/src/app/singleinvocador/singleinvocador.component.html
@@ -14,7 +14,7 @@
               <mat-card-title>{{ nameInvocador }}</mat-card-title>
             </mat-grid-tile>
             <mat-grid-tile [colspan]="1" [rowspan]="1">
-              <mat-card-title>Nivel de honor</mat-card-title>
+              <mat-card-title>{{ honorInovcador }}</mat-card-title>
             </mat-grid-tile>
             <mat-grid-tile [colspan]="2" [rowspan]="1">
               <section class="mat-body center-align">
@@ -36,10 +36,10 @@
           </mat-grid-list>
           <mat-grid-list cols="2" rowHeight="100px">
             <mat-grid-tile [colspan]="1" [rowspan]="1">
-              <button mat-flat-button routerLink="/calify-invocador" color="primary">Calificar</button>
+              <button mat-flat-button color="primary">Calificar</button>
             </mat-grid-tile>
             <mat-grid-tile [colspan]="1" [rowspan]="1">
-              <button mat-flat-button routerLink="/calify-invocador" color="warn">Agregar DodgeAlert</button>
+              <button mat-flat-button color="warn">Agregar DodgeAlert</button>
             </mat-grid-tile>
           </mat-grid-list>
         </mat-card-content>
