--- a/src/app/singleinvocador/singleinvocador.component.html
+++ b/src/app/singleinvocador/singleinvocador.component.html
@@ -2,21 +2,56 @@
   <h1 class="mat-h1">Comportamiento del invocador</h1>
   <mat-grid-list cols="1">
     <mat-grid-tile>
-      <mat-card class="dashboard-card">
-        <mat-card-content>
-          <mat-grid-list cols="3" rowHeight="100px">
-            <mat-grid-tile [colspan]="1" [rowspan]="2">
-              <img
-                src="https://am-a.akamaihd.net/image?f=https://news-a.akamaihd.net/public/images/articles/2015/september_2015/PPIU/pb_icon_final.jpg"
-                alt="" class="responsive-img" height="100vh" width="100vw">
+      <div class="dashboard-card">
+          <mat-grid-list cols="3" rowHeight="150px">
+            <mat-grid-tile [colspan]="1" [rowspan]="2" class="box">
+              <div *ngIf="invocador.honor != null" class="center">
+                <div>
+                  <img src="{{ invocador.honor.icon_src }}" alt="" height="200px" width="200px">
+                </div>
+                <div>
+                  <h2>{{ invocador.honor.name }}</h2>
+                </div>
+              </div>
+              <div *ngIf="invocador.honor == null" class="center">
+                <div>
+                  <img src="assets/img/honor/locked.png" alt="No icono" height="70px" width="70px">
+                </div>
+                <div clas="mat-display-1">
+                  Sin honor
+                </div>
+                <div class="mat-small">
+                  ¿Esta mal? ayudanos a actualizar a tus compañeros
+                </div>
+              </div>
             </mat-grid-tile>
-            <mat-grid-tile [colspan]="1" [rowspan]="1">
-              <mat-card-title>{{ nameInvocador }}</mat-card-title>
+            <mat-grid-tile [colspan]="1" [rowspan]="1" class="box">
+              <mat-card-title>{{ invocador.name }}</mat-card-title>
             </mat-grid-tile>
-            <mat-grid-tile [colspan]="1" [rowspan]="1">
-              <mat-card-title>{{ honorInovcador }}</mat-card-title>
+            <mat-grid-tile [colspan]="1" [rowspan]="1" class="box">
+              <mat-card-title>
+                <div *ngIf="invocador.clasification != null" class="center">
+                  <div>
+                    <img src="{{ invocador.clasification.icon_src }}" alt="" height="100px" width="100px">
+                  </div>
+                  <div clas="mat-display-1">
+                    {{ invocador.clasification.name }} {{ invocador.clasification.level }}
+                  </div>
+                </div>
+                <div *ngIf="invocador.clasification == null" class="center">
+                  <div>
+                    <img src="assets/img/ranks/default.png" alt="No icono" height="70px" width="70px">
+                  </div>
+                  <div clas="mat-display-1">
+                    Unranked
+                  </div>
+                  <div class="mat-small">
+                    ¿Esta mal? ayudanos a actualizar a tus compañeros
+                  </div>
+                </div>
+              </mat-card-title>
             </mat-grid-tile>
-            <mat-grid-tile [colspan]="2" [rowspan]="1">
+            <mat-grid-tile [colspan]="2" [rowspan]="1" class="box">
               <section class="mat-body center-align">
                 <mat-card-title>Descripcion de por que el honor</mat-card-title>
                 Descripcion de los motivos de honor y consejos Descripcion de los motivos de honor y consejos
@@ -24,14 +59,12 @@
                 Mute all o icon mute o ayuda en vision
               </section>
             </mat-grid-tile>
-            <mat-grid-tile [colspan]="1" [rowspan]="1">
-              <mat-card-title>Rank 2</mat-card-title>
+            <mat-grid-tile [colspan]="1" [rowspan]="1" class="box">
+              <mat-card-title *ngIf="invocador.percentage_victori == null"><section class="mat-body center-align">No existen datos para calcular procentaje de victoria</section></mat-card-title>
+              <mat-card-title *ngIf="invocador.percentage_victori != null"><section>{{ invocador.percentage_victori }} %</section></mat-card-title>
             </mat-grid-tile>
-            <mat-grid-tile [colspan]="1" [rowspan]="1">
-              <mat-card-title>Porcentaje victoria</mat-card-title>
-            </mat-grid-tile>
-            <mat-grid-tile [colspan]="1" [rowspan]="1">
-              <mat-card-title>Posiciones preferidas</mat-card-title>
+            <mat-grid-tile [colspan]="1" [rowspan]="1" class="box">
+              <mat-card-title><section class="mat-body center-align">Posiciones preferidas</section></mat-card-title>
             </mat-grid-tile>
           </mat-grid-list>
           <mat-grid-list cols="2" rowHeight="100px">
@@ -42,8 +75,7 @@
               <button mat-flat-button color="warn">Agregar DodgeAlert</button>
             </mat-grid-tile>
           </mat-grid-list>
-        </mat-card-content>
-      </mat-card>
+        </div>
     </mat-grid-tile>
   </mat-grid-list>
 </div>
